--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    {% include 'partials/_navbar.html'%}
+    {% comment %} {% include 'partials/_navbar.html'%} {% endcomment %}
     {% block content%} 
 
 
