--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,6 @@
+{% load static %}
 <footer>
     <p title="email">info@churchpilgrimage.com</p>
         <!-- <p><img src="./image/logo.svg" alt="church-logo"></p> -->
-    <p><button class="join"><a href="/register.html">join</a></button></p>
+    <p><button class="join"><a href="{% url 'registration'%}">join</a></button></p>
 </footer>  
