--- a/templates/church/about.html
+++ b/templates/church/about.html
@@ -4,11 +4,12 @@
 {% load static %}
 
  <div class="main">
-                <p>An Educative session on</p>
-                <p>Staying Focus in Times of Pressing issues for a better System in Nigeria</p>
-                <p><span>Date: 19/06/2020</span> <span>Time: 8:00am - 4:00pm</span></p>
+                <p class="text-lg-center">An Educative session on
+                    Staying Focus in Times of Pressing issues for a better System in Nigeria</p>
+                <p class="text-lg-center">Staying Focus in Times of Pressing issues for a better System in Nigeria</p>
+                <p class="text-center"><span>Date: 19/06/2020</span> <span>Time: 8:00am - 4:00pm</span></p>
 
-                <button type="submit"><a href="/register.html">Register</a></button>
+                <button type="submit"><a href="{% url 'registration'%}">Register</a></button>
 </div>
 
 {% endblock %}
