--- a/templates/church/registration.html
+++ b/templates/church/registration.html
@@ -4,19 +4,49 @@
   {% load static %}
   
         <main>
+            <nav>
+                    <div class="logo">
+                        <p>
+                            <img src="{% static 'img/logo.svg'%} alt="church-logo">
+                        </p>
+                        <p id="menu">
+                            <img src="{% static 'image/Hamburger_icon.png'%} alt="menu">
+                        </p>                
+                    </div>
+    
+                    <ul class="open-nav">
+                        <li>
+                            <a href="about.html">About us</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact us</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'better_nigeria' %}">Better Nigeria</a>
+                        </li>
+                        <li class="active">
+                            <a href="index.html">Messages</a>
+                        </li>
+                        <li class="close-container">
+                            <img class="" src="{% static 'img/icon-close.svg'%}" alt="close" id="close">
+                        </li>              
+                            
+                    </ul>
+                </nav>
+                
             <div class="register">
                 {% include 'partials/_alert.html'%}
                 <form class= "postForm" action="{% url 'registration'%}" method="POST">
                     <p>Register for Better Nigeria Conference</p>
                        {% csrf_token %}
                     <p class="input">
-                        <input placeholder="fullname" type="text" name="fullname" id="fullname-field" required>
+                        <input placeholder="Full Name" type="text" name="fullname" id="fullname-field" required>
                     </p>
                     <p class="input">
                         <input placeholder="Phone Number" type="text" name="phone_number" id="telephone-field" required>
                     </p>
                     <p class="input">
-                        <input placeholder="email" type="email" name="email" id="email-field" required>
+                        <input placeholder="Email Address" type="email" name="email" id="email-field" required>
                     </p>
                     <p>
                     <p class="checkbox">
