--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,32 +1,2 @@
-{% comment %} 
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
-
-<nav>
-    <div class="logo">
-        <p>
-            <img src="{% static 'img/logo.jpg'%}" alt="church-logo">
-        </p>
-        <p id="menu">
-            <img src="{% static 'img/icon-hamburger.svg'%}" alt="menu">
-        </p>                
-    </div>
-    
-    <ul class="open-nav nav-out">
-        <li>
-            <a href="{% url 'about'%}">About us</a>
-        </li>
-        <li>
-            <a href="{% url 'contact'%}">Contact us</a>
-        </li>
-        <li>
-            <a href="{% url 'better_nigeria'%}">Better Nigeria</a>
-        </li>
-        <li class="active">
-            <a href="index.html">Messages</a>
-        </li>
-        <li class="close-container">
-            <img class="" src="{% static 'img/icon-close.svg'%}" alt="close" id="close">
-        </li>     
-    </ul>
-</nav> {% endcomment %}
+{% comment %}  {% endcomment %}
