--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300&display=swap');
+    </style>
 </head>
 
 <body>
