Contact page is showing

--- a/templates/church/contact.html
+++ b/templates/church/contact.html
@@ -31,7 +31,7 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-4 text-center">
                 <h3 class="text-center">Send a Message</h3>
-                <a   href="{% url 'index' %}" class="text-center">pastor@rgclibertychristiancentre.org</a>
+                <a   href="{% url 'index' %}" class="text-center">pastor@pilgrimmiraclechurch.org</a>
             </div>
             
         </div>
@@ -50,7 +50,7 @@
         </div>
 <br /><br />
         {% include 'partials/_alert.html'%}
-        <form action="">
+        <form class="postForm" action = "{% url 'contact'%}", method="POST">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="row">
