Contact works just fine

--- a/templates/church/contact.html
+++ b/templates/church/contact.html
@@ -86,7 +86,7 @@
     <!--Google map-->
 <div class="container">
     <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.756881530364!2d36.84266951410125!3d-1.3216552360369498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11bddb88c3b5%3A0x30b0365e56bfd05b!2sRedeemed%20Gospel%20Church%2C%20Liberty%20Christian%20Centre!5e0!3m2!1sen!2sng!4v1626265738352!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1978.437654018742!2d3.8772310584328!3d7.367870776202742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s33%20Oremeji%20Street%2C%20behind%20Conac%20optical%2C%20Ososami%2C%20Oke%20ado%2C%20Ibadan.!5e0!3m2!1sen!2sng!4v1627161259204!5m2!1sen!2sng" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </div>
 
