--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -21,7 +21,7 @@
                 <a class="nav-link" href="{% url 'church' %}">CHURCH SERVICES</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% url 'messages' %}">SERMONS</a>
+                <a class="nav-link" href="{% url 'sermon' %}">SERMONS</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="{% url 'ministries' %}">MINISTRIES</a>
