--- a/templates/church/index.html
+++ b/templates/church/index.html
@@ -127,7 +127,8 @@
 <!--Google map-->
 <div class="container">
     <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1978.437654018742!2d3.8772310584328!3d7.367870776202742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s33%20Oremeji%20Street%2C%20behind%20Conac%20optical%2C%20Ososami%2C%20Oke%20ado%2C%20Ibadan.!5e0!3m2!1sen!2sng!4v1627161259204!5m2!1sen!2sng" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1978.437654018742!2d3.8772310584328!3d7.367870776202742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s33%20Oremeji%20Street%2C%20behind%20Conac%20optical%2C%20Ososami%2C%20Oke%20ado%2C%20Ibadan.!5e0!3m2!1sen!2sng!4v1627161259204!5m2!1sen!2sng" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 </div>
 
 <!--social media icons-->
