--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -13,7 +13,7 @@
                    <a class="nav-link" href="{% url 'church' %}">Church Services</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="{% url 'messages' %}">Sermons</a>
+                   <a class="nav-link" href="{% url 'sermon' %}">Sermons</a>
                </li>
                <li class="nav-item">
                    <a class="nav-link" href="#">Privacy Policy</a>
