Added WhatsApp Number

--- a/templates/church/about.html
+++ b/templates/church/about.html
@@ -31,7 +31,7 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body">
-                <p class="">The Vision of LCC is to reach the unreached with the gospel of Jesus Christ and to empower them to lead fulfilled lives.
+                <p class="">Our vision is to raise MEN and WOMEN to Perfection.
                 </p>
               </div>
             </div>
@@ -44,7 +44,7 @@
             </div>
             <div id="collapseTwo" class="collapse " aria-labelledby="headingTwo" data-parent="#accordionExample">
               <div class="card-body">
-                <p class="">The Mission of Liberty Christian Centre is to disciple men and women in the knowledge of God to effectively transform society spiritually, socially and economically.</p>
+                <p class="">Preach Holiness, Declare My Praise, Destroy Idolatry and Set my People in Order and See the Gory of God Revealed in Them.</p>
               </div>
             </div>
           </div>
@@ -59,19 +59,11 @@
                 <ul class="list-group list-group-flush">
                     <p>
                         “Molding believers, influencing the world”</p>
-                    <li class="list-group-item">– Godliness (Titus 2:12)</li>
+                    <li class="list-group-item">– Holiness (Hebrews 12:14b)</li>
                     <li class="list-group-item">
-                        – Integrity (Ephesians 6:14)</li>
+                        – God’s Praise (Isaiah 42:8)</li>
                     <li class="list-group-item">
-                        – Accountability (1 Thessalonians 5:12-13)”.</li>
-                    <li class="list-group-item">
-                        – Excellence (Philippians 1:9-10)</li>
-                    <li class="list-group-item">
-                        – Unity of purpose: (1 Peter 3:15)</li>
-                    <li class="list-group-item">
-                        – Defense of the truth (1 Peter 3:15)</li>
-                    <li class="list-group-item">
-                        – Evangelism & Discipleship (Matt. 28:19-20)</li>
+                        – Destroy Idolatry (Exodus 34:12-13)”.</li>
                 </ul>
               </div>
             </div>
