--- a/templates/church/church.html
+++ b/templates/church/church.html
@@ -23,18 +23,18 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7">
                 <h1 style="font-weight: 900; color: red; padding: 10px;" class="display-3">Worship With Us</h1>
                 <div class="main-service">
-                    <h2 style=" padding-left: 15px; padding-top: 10px;" class=" my-1 welcome_header2 display-4"> Sunday Services    </h2>
-                    <p style="font-size: 32px; padding: 10px; " class="para my-1">Foundation Class: 9:00 a.m. – 10:00 a.m. </p> 
+                    <h2 style=" padding-left: 15px; padding-top: 10px;" class=" my-1 welcome_header2 display-4"> Sunday Services - Kingdom Dimension Service, turning saints into true worshippers.</h2>
+                    <p style="font-size: 32px; padding: 10px; " class="para my-1">Pre-Service: 8:00 a.m. – 8:30 a.m. </p> 
                     <p style="font-size: 32px; padding: 10px;" class="para my-1">
-                    Prayer Hour : 9:30 a.m – 10:30 a.m. </p> 
-                    <p  style="font-size: 32px; padding: 10px; " class="para my-1">Main Service : 10:30a.m. – 12:30 p.m.</p>
+                    First Service: 9:00am -10:15am </p> 
+                    <p  style="font-size: 32px; padding: 10px; " class="para my-1">Second Service : 10:30am -12noon</p>
                 </div>
                 <div class="other-service">
                     <h2 style=" padding-left: 15px; padding-top: 10px;" class=" my-1 welcome_header2 display-4"> Other Services</h2>
-                    <p style="font-size: 32px; padding: 10px; padding-top: 25px;" class="para my-1">Morning Glory Prayers: 5.30 a.m. – 7.00 a.m. </p> 
+                    <p style="font-size: 32px; padding: 10px; padding-top: 25px;" class="para my-1">Wednesday Midweek Service: 5.00 p.m. – 7.00 p.m. </p> 
                     <p style="font-size: 32px; padding: 10px; " class="para my-1">
-                        Thursday Inspiration & Healing Service : 5.30 p.m.– 7.00 p.m.</p> 
-                    <p  style="font-size: 32px; padding: 10px; " class="para my-1">Friday Online Kesha : 10.00 p.m. – 12.30 a.m</p>
+                        Power Encounter 1st - 3rd of Every Month. - 5:00pm - 7:00pm</p> 
+                    <p  style="font-size: 32px; padding: 10px; " class="para my-1">Miracle Night - Every Third Friday of the Month 10:00pm</p>
                 </div>
                 <div class="other-service">
                     <h2 style=" padding-left: 15px; padding-top: 10px;" class=" my-1 welcome_header2 display-4"> HBC's </h2>
