--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -34,14 +34,15 @@
 
        <div class="col-12 text-center">
            <hr class="dark">
-           <h5>RGC - LCC. Copyright &copy All rights reserved.</h5>
+           <h5>Pilgrim Miracle Church Copyright &copy All rights reserved.</h5>
+           
        </div>
 
    </div>
    <!--back to top icon-->
    <a id="back-to-top" href="#" class="btn btn-outline-danger btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
    <!--whatsapp chat-->
-   <a href="https://api.whatsapp.com/send?phone=7310747066&text=Hola%information%." class="float1" target="_blank">
+   <a href="https://api.whatsapp.com/send?phone=+23409124670931&text=Hola%information%." class="float1" target="_blank">
        <i class="fab fa-whatsapp my-float"></i>
    </a>
    <a id="chat_btn" href="#" type="button" class=" btn btn-outline-light btn-lg">
