Added the church's logo

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -3,7 +3,7 @@
     <div class="container">
 
         <!-- Brand -->
-        <a href="index.html" class="navbar-brand"><img  alt="PMC" src="{% static 'img/logo.jpg' %}"/></a>
+        <a href="{% url 'index'%}" class="navbar-brand"><img  alt="PMC" src="{% static 'img/logo.png' %}"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
