--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -42,7 +42,7 @@
    <!--back to top icon-->
    <a id="back-to-top" href="#" class="btn btn-outline-danger btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
    <!--whatsapp chat-->
-   <a href="https://api.whatsapp.com/send?phone=+23409124670931&text=Hola%information%." class="float1" target="_blank">
+   <a href="https://wa.me/+23409124670931=Hola%information%." class="float1" target="_blank">
        <i class="fab fa-whatsapp my-float"></i>
    </a>
    <a id="chat_btn" href="#" type="button" class=" btn btn-outline-light btn-lg">
