--- a/templates/church/about.html
+++ b/templates/church/about.html
@@ -7,13 +7,15 @@
 
     <div class="row jumbotron">
         <div id="welcome" class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 ">
-            <img class="card-img-top" src="rgc_folder/IMG_0106-1-scaled.jpg" alt="founders_Image">
+            <img class="card-img-top" src="{% static 'img/image-3.jpg'%}" alt="founders_Image">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7">
             <h1 style="font-weight: 900; color: red; padding: 25px;" class=" my-1  display-4 ">ABOUT US </h1>
             <h2 style=" padding-left: 25px; padding-top: 10px;" class=" my-1 welcome_header2 display-4"> A Brief History </h2>
-            <p id="about" style=" padding: 25px; padding-top: 15px;  line-height: 2" class="para ">Liberty Christian Centre was officially launched in 1999. The Senior Pastor; Bishop Dr. Kepha Omae took a bold step of faith and obedience   to the Lord and began the work with a congregation of about 25 members. </p> 
-            <p id="about" style="padding: 25px; padding-top: 15px;  line-height: 2" class="para ">The beginning was not an easy one as the location at that time was considered a wilderness and no church was thriving at all along Mombasa road. </p> 
+            <p id="about" style=" padding: 25px; padding-top: 15px;  line-height: 2" class="para ">Abundant Life Prayer and Evangelistic Ministry also known as Pilgrim Miracle Church 1st Sunday Service was held at Miracle House, Alarere Off Old Ife road, Ibadan o the 25th of December 1989 after a week long crusade.
+               In 1990, the Lord promised to build the church a bigger place and directed the set man, Rev Ademolaami Afolayan to move the ministry location to Ososami, Ibadan while services continue at Alarere Branch. </p> 
+            <p id="about" style="padding: 25px; padding-top: 15px;  line-height: 2" class="para ">By God's grace, the foundation for the Miracle Tower Auditorium was laid in the year 1991. and was finally dedicated in the 2008.
+               Over the years, several lives have been touched, souls saved, through our evangelistic efforts in crusades and outreaches and the church has been a platform for growing believers to maturity as we remain committed to our ministerial mandate of Declaring God's Praise, Destroying Idolatry and Preaching Holiness. </p> 
             <p  id="about" style=" padding: 25px; padding-top: 15px;  line-height: 2" class="para">Despite all the prevalent challenges in the area, Bishop Omae and a few brethren who believed in his vision steered on and today we look back and say the Indeed the Lord is Ebenezer.</p>
         
     </div>
